<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableRow
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        >
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:text="@string/name1"
            />
        <TextView
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:text="@string/name2"
            />
        </TableRow>
        <TableRow
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        >
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:text="@string/name3"
            />
        <TextView
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:text="@string/name4"
            />
        </TableRow>

</TableLayout>
